# DMG_Emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
apu/: CMakeLists.txt
common/: common.h
cpu/: CMakeLists.txt
cpu/include/: 16bitLoads.h  16bit_arithmetic.h  8bitLoads.h  8bit_arithmetic.h  8bit_logic.h  InstructCommon.h  InstructionSet.h  cpu.h  opcodes.h  rotates.h
cpu/src/: 16bitLoads.c  16bit_arithmetic.c  8bitLoads.c  8bit_arithmetic.c  8bit_logic.c  InstructionSet.c  Instructions.c  cpu.c  opcodes.c  rotates.c
include/: common.h
input/: CMakeLists.txt
memory/: CMakeLists.txt
memory/include/: memory.h
memory/src/: memory.c
ppu/: CMakeLists.txt
python_scripts/: 16bit_arithmetic.py  16bitloads.py  8bit_arithmetic.py  8bit_logic.py  8bitloads.py
rom/: CMakeLists.txt
tests/: CMakeLists.txt
